Compiler/parser.py
import sys
#from typing import type_check_only
from lexer import *

# Parser object keeps track of current token and checks if the code matches the grammar.


class Parser:
    def __init__(self, lexer, emitter):
        self.lexer = lexer
        self.emitter = emitter

        self.hasMainProcedure = False #Helps to know if there is one and only one Main procedure
        self.symbols = []    # Variables declared so far and their types and values        
        self.procedures = [] # Procedures declared so far with their parameter names

        #Variables used for procedure call
        self.tempProcedureCall = None
        self.tempParameterCall = []
        self.tempMainCalls = [] #Needed for ignoring Main procedure calls temporaly

        #Variables used for logic validations in Procedures
        self.tempProcedure = None
        self.tempParameters = []
        self.tempOperation = ""
        #Variables used for logic validations: e.g. check if a variable already exists
        self.tempIdent  = None 
        self.tempType = None
        self.tempValue = None #Variables values
        self.tempRows = None #Amount of rows for matrixes
        self.tempColumns = None #Amount of columns for matrixes

        # Emitter variables
        self.indentation = ""
        self.currentLineText = ""
        self.stepVar = "i0"

        self.curToken = None
        self.peekToken = None
        self.nextToken()
        self.nextToken()    # Call this twice to initialize current and peek.

    # Return true if the current token matches.
    def checkToken(self, kind):
        return kind == self.curToken.kind

    # Return true if the next token matches.
    def checkPeek(self, kind):
        return kind == self.peekToken.kind

    # Try to match current token. If not, error. Advances the current token.
    def match(self, kind):
        if not self.checkToken(kind):
            self.abort("Expected " + kind.name +
                       ", got " + self.curToken.kind.name)
        self.nextToken()

    # Advances the current token.
    def nextToken(self):
        self.curToken = self.peekToken
        self.peekToken = self.lexer.getToken()
        # No need to worry about passing the EOF, lexer handles that.

    # Finished the program to indicate an Error
    def abort(self, message):
        sys.exit("Error. " + message + " at Line " + str(self.lexer.curLine))

    # Finished the program to indicate an Error
    def abortLine(self, message, lineNumber):
        sys.exit("Error. " + message + " at Line " + str(lineNumber))

        # Production rules.

    # program ::= {statement}
    def program(self):
        self.emitter.headerLine("import out_aux")

        # Parse all the statements in the program.
        while not self.checkToken(TokenType.EOF):
           self.procedure() # The whole program made of procedures

        #Checks the pending Main procedure calls (were not checed before)
        for mainCall in self.tempMainCalls:
            if not self.procedureExists(mainCall[0], len(mainCall[1])):
                self.abortLine("Undefined procedure call " + mainCall[0] + " (" + str(len(mainCall[1])) + ")", mainCall[2]-1)

    # procedure := Procedure IDENT "(" {params} ")" "{" {statement} "}"
    def procedure(self):
        self.match(TokenType.Procedure)
        print("STATEMENT-PROCEDURE-DEFINITION")
        self.tempProcedure = self.curToken.text

        #Has only one Main procedure validations
        if self.hasMainProcedure and self.tempProcedure == 'Main':
            self.abort("Multiple definition of Main method")

        # Ignore identation in Main method
        if not self.tempProcedure == 'Main':
            self.currentLineText += "def " + self.tempProcedure


        #Checks if the first procedure is Main
        if not self.hasMainProcedure:
            if self.tempProcedure != 'Main':
                self.abort("First Procedure is not Main")
            else:
                self.hasMainProcedure = True

        self.nextToken()
        self.match(TokenType.ROUNDBRACKETLEFT)

        if not self.tempProcedure == 'Main':
            self.currentLineText += "("

        #Procedure without parameters
        if self.checkToken(TokenType.ROUNDBRACKETRIGHT):
            self.tempParameters = []
            if not self.tempProcedure == 'Main':
                self.currentLineText += "):"
                self.emitter.emitLine(self.currentLineText)
                self.currentLineText = ""
                self.indentation += '\t'
            self.nextToken()

        #Procedure with parameters
        else:
            self.params(self.tempParameters)
            if not self.tempProcedure == 'Main':
                for param in self.tempParameters:
                    self.currentLineText += param + ","
                self.currentLineText = self.currentLineText[:-1]
                self.currentLineText += '):'
                self.emitter.emitLine(self.currentLineText)
                self.currentLineText = ""
                self.indentation += '\t'


        #Checks if the Main method has no parameters
        if len(self.tempParameters) != 0 and self.tempProcedure == 'Main':
            self.abort("Main method has parameters and needs zero (0) parameters")

        # Save the procedure name if doesn't exists yet
        if not self.procedureExists(self.tempProcedure, len(self.tempParameters)):
            self.addProcedure(self.tempProcedure, len(self.tempParameters), self.tempParameters)

        else:
            self.abort("The procedure " + self.tempProcedure + " (" + str(len(self.tempParameters)) + ") is already defined")

        # Define parameters as local variables
        for param in self.tempParameters:
            self.addSymbol(param, None, self.tempProcedure, None, None, None)

        self.match(TokenType.CURLYBRACKETLEFT)

        # Zero or more statements in the body.
        statementCounter = 0
        while not self.checkToken(TokenType.CURLYBRACKETRIGHT):
            statementCounter+=1
            self.statement(self.tempProcedure)
        
        if statementCounter == 0:
            self.emitter.emitLine(self.indentation + "pass")

        self.match(TokenType.CURLYBRACKETRIGHT)
        if not self.tempProcedure == 'Main':
            self.indentation = self.indentation[:-1]
        


        self.tempProcedure = None
        self.tempParameters = []
        # Newline.
        self.semicolon()

    # One of the following statements...
    def statement(self, procedure):
        #Check the first token to see what kind of statement this is.

        #Call procedure parsing
        #statement := Call IDENT "(" ")"
        if self.checkToken(TokenType.Call):
            print("STATEMENT-PROCEDURE-CALL")
            self.nextToken()
            self.checkToken(TokenType.IDENT)
            self.tempProcedureCall = self.curToken.text # Saves name for validations
            self.nextToken()
            self.match(TokenType.ROUNDBRACKETLEFT)
            self.currentLineText += self.indentation + self.tempProcedureCall + '('

            if self.checkToken(TokenType.ROUNDBRACKETRIGHT):
                self.tempParameterCall = []
                self.currentLineText += ')'
                self.emitter.emitLine(self.currentLineText)
                self.currentLineText = ""
                self.nextToken()
            else:
                self.paramsCall(self.tempParameterCall)
                for param in self.tempParameterCall:
                    if param == "false":
                        self.currentLineText += "False,"
                    elif param == "true":
                        self.currentLineText += "True,"
                    else:
                        self.currentLineText += param + ","
                self.currentLineText = self.currentLineText[:-1]
                self.currentLineText += ')'
                self.emitter.emitLine(self.currentLineText)
                self.currentLineText = ""


            # Program checks Main procedure calls at the end of the program (due to scope restrictions)
            if not procedure == 'Main':
                # Checks if the called procedure exists
                if self.procedureExists(self.tempProcedureCall, len(self.tempParameterCall)):
                    self.tempProcedureCall = None
                    self.tempParameterCall = []
                else:
                    self.abort("Undefined procedure call at " + self.tempProcedureCall + " (" + str(len(self.tempParameterCall)) + ")")
            else:
                self.tempMainCalls.append((self.tempProcedureCall, self.tempParameterCall, self.lexer.curLine))
                self.tempProcedureCall = None
                self.tempParameterCall =[]

        #Simple variable declaration/assignation
        # statement := ident "=" (expression | true | false) ";" 
        #Var =  
        elif self.checkToken(TokenType.IDENT) and self.peekToken.kind == TokenType.EQ:
            self.tempIdent = self.curToken.text
            self.currentLineText += self.indentation + self.tempIdent
            self.nextToken()
            self.match(TokenType.EQ) # identifier followed by =
            self.currentLineText += '='
            print("STATEMENT-SIMPLE VAR ASSIGNATION")
            if self.sintaxVar(self.tempIdent):
                self.assignation(procedure)
            else:
                self.abort("Invalid identifier: "+self.tempIdent)
        
        #Compound variable declaration/assignation
        #statement := IDENT compoundIdent "=" compoundDeclaration ";"
        #compoundIdent := {"," IDENT compoundIdent}
        #Compound variable declaration/assignation
        #statement := IDENT compoundIdent "=" compoundDeclaration ";"
        #compoundIdent := {"," IDENT compoundIdent}
        elif self.checkToken(TokenType.IDENT) and self.peekToken.kind == TokenType.COMA:
            variables = []

            self.tempIdent = self.curToken.text
            self.match(TokenType.IDENT)

            if self.sintaxVar(self.tempIdent):
                variables.append(self.tempIdent)
            else:
                self.abort("Invalid identifier: "+self.tempIdent)
            
            
            print("STATEMENT-COMPOUND VAR ASSIGNATION")

            while not self.checkToken(TokenType.EQ):
                self.match(TokenType.COMA)
                self.tempIdent = self.curToken.text
                self.match(TokenType.IDENT)
                if self.sintaxVar(self.tempIdent):
                    variables.append(self.tempIdent)
                else:
                    self.abort("Invalid identifier: "+self.tempIdent)
            
            self.match(TokenType.EQ)

            self.tempIdent = variables[0]

            self.currentLineText = self.tempIdent + '='
            self.assignation(procedure)


            for i in range(1, len(variables)):
                self.match(TokenType.COMA)
                self.tempIdent = variables[i]
                self.currentLineText = self.tempIdent + '='
                self.assignation(procedure)
        
        #List operations or modifiers
        elif self.isListIdent(procedure) and self.checkPeek(TokenType.SQRBRACKETLEFT):
            self.currentLineText += self.indentation
            print("STATEMENT-LIST MODIFIER")
            self.nextToken()
            is_range = False
            delimiters = self.squareBrackets(self.tempIdent, procedure)
            if isinstance(delimiters, tuple):
                is_range = True
                print(is_range)
            
            if self.checkToken(TokenType.EQ): #Validation for List modifiers e.g: listvar[3] = true; listvar[1:3] = [true, false];
                                    #statement := IDENT squareBrackets "=" ("[" boolean listValues "]" | boolean)
                self.match(TokenType.EQ)
                if is_range: #range assignation: listvar[1:3] = [true, false]
                    self.match(TokenType.SQRBRACKETLEFT)
                    self.currentLineText += '['
                    list_range = delimiters[1] - delimiters[0]
                    self.checkLstElmnt() #first element
                    for i in range(list_range - 1):
                        self.match(TokenType.COMA)
                        self.currentLineText += ', '
                        self.checkLstElmnt()
                    self.match(TokenType.SQRBRACKETRIGHT)
                    self.currentLineText += '])'
                    self.emitter.emitLine(self.currentLineText)
                    self.currentLineText = ""
                else:
                    self.checkLstElmnt()
                    self.currentLineText += ')'
                    self.emitter.emitLine(self.currentLineText)
                    self.currentLineText = ""

            elif self.checkToken(TokenType.DOT): #Validation for list operations: listvar[0].Neg; listvar[0].T; listvar[0].F;
                                                #statement := IDENT squareBrackets "." ("Neg" | "T" | "F")
                print("DOT")
                self.match(TokenType.DOT)
                if self.checkToken(TokenType.Neg) or self.checkToken(TokenType.F) or self.checkToken(TokenType.T):
                    if self.checkToken(TokenType.Neg):
                        self.currentLineText += '0)'
                    elif self.checkToken(TokenType.F):
                        self.currentLineText += 'False)'
                    elif self.checkToken(TokenType.T):
                        self.currentLineText += 'True)'
                    self.emitter.emitLine(self.currentLineText)
                    self.currentLineText = ""
                    self.nextToken()
                else:
                    self.abort("Unrecognized statement at: " + self.curToken.text)
        
        #Insert or delete elements from list
        elif self.isListIdent(procedure) and self.checkPeek(TokenType.DOT):
            self.currentLineText += self.indentation + self.curToken.text + '.'
            self.nextToken()
            self.match(TokenType.DOT)
            if self.curToken.text == "insert": #listvar.Insert(5,true);
                self.currentLineText += "insert("
                print("STATEMENT - INSERT")
                self.nextToken()
                self.match(TokenType.ROUNDBRACKETLEFT)
                self.currentLineText += self.curToken.text
                size = self.getSymbolValue(self.tempIdent)
                self.inRange(size, procedure)
                self.match(TokenType.COMA)
                self.currentLineText += ', '
                self.checkLstElmnt()
                self.currentLineText += ')'
                self.match(TokenType.ROUNDBRACKETRIGHT)
                self.emitter.emitLine(self.currentLineText)
                self.currentLineText = ""

            elif self.curToken.text == "delete":
                self.currentLineText += "delete("
                print("STATEMENT - DELETE")
                self.nextToken()
                self.match(TokenType.ROUNDBRACKETLEFT)
                self.currentLineText += self.curToken.text + ')'
                size = self.getSymbolValue(self.tempIdent) - 1
                self.inRange(size, procedure)
                self.match(TokenType.ROUNDBRACKETRIGHT)
                self.emitter.emitLine(self.currentLineText)
                self.currentLineText = ""
            else:
                self.abort("Invalid identifier "+ self.curToken.text)
        
        #Matrix operations or modifiers
        elif self.isMatrixIdent(procedure) and self.checkPeek(TokenType.SQRBRACKETLEFT):
            print("STATEMENT-MATRIX MODIFIER")

            tempMatrixIdent = self.curToken.text
            tempMatrixRow = ""
            tempOperation = ""
            tempMatrixColumn = ""
            self.nextToken() #This should be the [
            self.nextToken() #This is what is next to the [
            
            #Checks if the token is a number:
            if self.checkToken(TokenType.NUMBER) or self.checkToken(TokenType.IDENT):
                tempMatrixRow = self.curToken.text
                rowIndex = 0
                if self.checkToken(TokenType.NUMBER):
                    rowIndex = int(self.curToken.text)
                elif self.symbolExists(self.curToken.text, procedure) and self.getSymbolType(self.curToken.text) == TokenType.NUMBER:
                    rowIndex = self.getSymbolValue(self.curToken.text)
                
                else:
                    self.abort("Trying to access an invalid identifier: "+ self.curToken.text)

                self.checkRows(self.getMatrixRows(self.tempIdent), rowIndex)
                self.nextToken()

                #This is true when user is trying to access a row
                if self.checkToken(TokenType.SQRBRACKETRIGHT): #Checks for matrix[index]
                    tempOperation = "Row"
                    self.nextToken()
                    if self.checkToken(TokenType.EQ):
                        self.nextToken()

                        #A list is given
                        if self.checkToken(TokenType.SQRBRACKETLEFT):
                            self.nextToken()
                            self.checkLstElmnt() #first element
                            elements = 1
            
                            while not self.checkToken(TokenType.SQRBRACKETRIGHT):
                                self.match(TokenType.COMA)
                                self.checkLstElmnt()
                                elements = elements + 1
                            
                            if elements == self.getMatrixColumns(tempMatrixIdent):
                                self.match(TokenType.SQRBRACKETRIGHT)
                            else:
                                self.abort("The size of the list doesn't match the matrix dimensions")
                        
                        #A matrix row is given
                        elif self.isMatrixIdent(procedure):
                            m2Rows = self.getMatrixRows(self.curToken.text)
                            m2Columns = self.getMatrixColumns(self.curToken.text)
                            if m2Columns == self.getMatrixColumns(tempMatrixIdent):
                                self.nextToken()
                                self.match(TokenType.SQRBRACKETLEFT)

                                if self.checkToken(TokenType.NUMBER) or self.checkToken(TokenType.IDENT):
                                    rowIndex = 0
                                    if self.checkToken(TokenType.NUMBER):
                                        rowIndex = int(self.curToken.text)
                                    elif self.symbolExists(self.curToken.text, procedure) and self.getSymbolType(self.curToken.text) == TokenType.NUMBER:
                                        rowIndex = self.getSymbolValue(self.curToken.text)
                                    
                                    else:
                                        self.abort("Trying to access an invalid identifier: "+ self.curToken.text)
                                    
                                    self.checkRows(m2Rows, rowIndex)
                                    self.nextToken()
                                    self.match(TokenType.SQRBRACKETRIGHT);
                                else:
                                    self.abort("Invalid token or identifier: " + self.curToken.text)
                            else:
                                self.abort("Matrix " + self.curToken.text + " dimensions doesn't match " + tempMatrixIdent)
                        
                        #A type list variable is given
                        elif self.isListIdent(procedure):
                            listSize = self.getSymbolValue(self.curToken.text)

                            if listSize == self.getMatrixColumns(tempMatrixIdent):
                                self.nextToken()
                            else:
                                self.abort("List " + self.curToken.text + " doesn't match matrix dimensions")
                        
                        else:
                            self.abort("Invalid token or identifier: " + self.curToken.text)

                elif self.checkToken(TokenType.COMA): #Checks for matrix[row,column]
                    tempOperation = "Element"
                    self.nextToken()
                    if self.checkToken(TokenType.NUMBER):
                        tempMatrixColumn = self.curToken.text
                        columnIndex = int(self.curToken.text)
                        self.checkColumns(self.getMatrixColumns(self.tempIdent), columnIndex) 
                        self.nextToken()
                        self.match(TokenType.SQRBRACKETRIGHT)

                        if self.checkToken(TokenType.EQ):
                            self.nextToken()

                            #A specific value is given
                            if self.checkToken(TokenType.true) or self.checkToken(TokenType.false) or self.getSymbolType(self.curToken.text, procedure) == TokenType.BOOLEAN:
                                self.nextToken()
                            #A list element is given    
                            elif self.isListIdent(procedure):
                                size = self.getSymbolValue(self.curToken.text)
                                self.nextToken()
                                self.match(TokenType.SQRBRACKETLEFT)
                                if self.checkToken(TokenType.NUMBER):
                                    index = int(self.curToken.text)
                                elif self.symbolExists(self.curToken.text, procedure) and self.getSymbolType(self.curToken.text, procedure) == TokenType.NUMBER:
                                    index = self.getSymbolValue(self.curToken.text)  
                                else:
                                    self.abort("Trying to access an invalid identifier: "+ self.curToken.text) 
                                
                                self.checkRows(size, index);
                                self.nextToken()
                                self.match(TokenType.SQRBRACKETRIGHT)
                            #A matrix element is given
                            elif self.isMatrixIdent(procedure):
                                m2Columns = self.getMatrixColumns(self.curToken.text)
                                m2Rows = self.getMatrixRows(self.curToken.text)

                                self.nextToken()
                                self.match(TokenType.SQRBRACKETLEFT)
                                if self.checkToken(TokenType.NUMBER):
                                    rowIndex = int(self.curToken.text)
                                elif self.symbolExists(self.curToken.text, procedure) and self.getSymbolType(self.curToken.text, procedure) == TokenType.NUMBER:
                                    rowIndex = self.getSymbolValue(self.curToken.text)  
                                else:
                                    self.abort("Trying to access an invalid identifier: "+ self.curToken.text)
                                if rowIndex < m2Rows:
                                    self.nextToken()
                                else:
                                    self.abort("Trying to access an index out of range")
                                self.match(TokenType.COMA)
                                if self.checkToken(TokenType.NUMBER):
                                    columnIndex = int(self.curToken.text)
                                elif self.symbolExists(self.curToken.text, procedure) and self.getSymbolType(self.curToken.text, procedure) == TokenType.NUMBER:
                                    columnIndex = self.getSymbolValue(self.curToken.text)  
                                else:
                                    self.abort("Trying to access an invalid identifier: "+ self.curToken.text)
                                if columnIndex < m2Columns:
                                    self.nextToken()
                                else:
                                    self.abort("Trying to access an index out of range")
                                self.match(TokenType.SQRBRACKETRIGHT)
                            else:
                                self.abort("Invalid token or identifier: " + self.cutToken.text)
                    else:
                        self.abort("Expected an int, got: "+ self.curToken.text)

                else:
                    self.abort("Expected an int or :, got: "+ self.curToken.text)

                #Checks for matrix1[].Neg operation
                if self.checkToken(TokenType.DOT):
                    self.nextToken()
                    if self.curToken.text == "Neg":
                        self.currentLineText = self.indentation
                        self.currentTextLine = self.indentation
                        if tempOperation == "Row":
                            self.currentLineText += "out_aux.modifyMatrixRow(" + tempMatrixIdent + ", " + tempMatrixRow + ")"
                        elif tempOperation == "Element":
                            self.currentLineText += "out_aux.modifyMatrixElement(" + tempMatrixIdent + ", " + tempMatrixRow + ", " + tempMatrixColumn + ")"
                        self.emitter.emitLine(self.currentLineText)
                        self.currentLineText = ""
                        self.nextToken()
                    else:
                        self.abort("Expected Neg, got: " + self.curToken.text)

            #Checks for the operation matrix[:,column]
            elif self.checkToken(TokenType.DOUBLEDOT):
                tempOperation = "Column"
                self.nextToken()
                self.match(TokenType.COMA)

                if self.checkToken(TokenType.NUMBER):
                    columnIndex = int(self.curToken.text)
                elif self.symbolExists(self.curToken.text, procedure) and self.getSymbolType(self.curToken.text, procedure) == TokenType.NUMBER:
                    columnIndex = self.getSymbolValue(self.curToken.text)  
                else:
                    self.abort("Trying to access an invalid identifier: "+ self.curToken.text)
                    
                columnIndex = int(self.curToken.text)
                self.checkColumns(self.getMatrixColumns(self.tempIdent), columnIndex)
                self.nextToken()
                self.match(TokenType.SQRBRACKETRIGHT)

                if self.checkToken(TokenType.EQ):
                        self.nextToken()

                        #A list is given
                        if self.checkToken(TokenType.SQRBRACKETLEFT):
                            self.nextToken()
                            self.checkLstElmnt() #first element
                            elements = 1
            
                            while not self.checkToken(TokenType.SQRBRACKETRIGHT):
                                self.match(TokenType.COMA)
                                self.checkLstElmnt()
                                elements = elements + 1
                            
                            if elements == self.getMatrixRows(tempMatrixIdent):
                                self.match(TokenType.SQRBRACKETRIGHT)
                            else:
                                self.abort("The size of the list doesn't match the matrix dimensions")
                        
                        #A matrix column is given
                        elif self.isMatrixIdent(procedure):
                            m2Rows = self.getMatrixRows(self.curToken.text)
                            m2Columns = self.getMatrixColumns(self.curToken.text)
                            if m2Rows== self.getMatrixRows(tempMatrixIdent):
                                self.nextToken()
                                self.match(TokenType.SQRBRACKETLEFT)
                                self.match(TokenType.DOUBLEDOT)
                                self.match(TokenType.COMA)

                                if self.checkToken(TokenType.NUMBER) or self.checkToken(TokenType.IDENT):
                                    columnIndex = 0
                                    if self.checkToken(TokenType.NUMBER):
                                        columnIndex = int(self.curToken.text)
                                    elif self.symbolExists(self.curToken.text, procedure) and self.getSymbolType(self.curToken.text, procedure) == TokenType.NUMBER:
                                        columnIndex = self.getSymbolValue(self.curToken.text)
                                    
                                    else:
                                        self.abort("Trying to access an invalid identifier: "+ self.curToken.text)
                                    
                                    self.checkColumns(m2Columns, columnIndex)
                                    self.nextToken()
                                    self.match(TokenType.SQRBRACKETRIGHT);
                                else:
                                    self.abort("Invalid token or identifier: " + self.curToken.text)
                            else:
                                self.abort("Matrix " + self.curToken.text + " dimensions doesn't match " + tempMatrixIdent)
                        
                        #A type list variable is given
                        elif self.isListIdent(procedure):
                            listSize = self.getSymbolValue(self.curToken.text)

                            if listSize == self.getMatrixRows(tempMatrixIdent):
                                self.nextToken()
                            else:
                                self.abort("List " + self.curToken.text + " doesn't match matrix dimensions")
                        
                        else:
                            self.abort("Invalid token or identifier: " + self.curToken.text)
                

            
            else:
                self.abort("Expected an int or :, got: "+ self.curToken.text)
            
            #Checks for matrix1[].Neg operation
            if self.checkToken(TokenType.DOT):
                self.nextToken()
                if self.curToken.text == "Neg":
                    self.currentLineText = self.indentation
                    self.currentLineText += "out_aux.modifyMatrixColumn(" + tempMatrixIdent + ", " + tempMatrixColumn + ")"
                    self.emitter.emitLine(self.currentLineText)
                    self.currentLineText = ""
                    self.nextToken()
                else:
                    self.abort("Expected Neg, got: " + self.curToken.text)
        
        #Matrix modifiers
        elif self.isMatrixIdent(procedure) and self.checkPeek(TokenType.DOT):

            matrixColumns = self.getMatrixColumns(self.tempIdent)
            matrixRows = self.getMatrixRows(self.tempIdent)
            matrix = self.tempIdent
            tempMatrixOperation = ""
            tempList = ""
            self.nextToken()
            if self.checkPeek(TokenType.IDENT):
                self.nextToken()
                
                #Checks if the user wants to retrieve the rows and columns of a matrix
                if self.curToken.text == "shapeF" or self.curToken.text == "shapeC":
                    self.currentTextLine = self.indentation
                    if self.curToken.text == "shapeF":
                        self.currentTextLine += "len("  + matrix + ")"
                    else:
                        self.currentTextLine += "len("  + matrix + "[0])"
                    self.emitter.emitLine(self.currentTextLine)
                    self.currentTextLine = ""
                    print("GET MATRIX SHAPE: " + self.curToken.text)
                    self.nextToken()
                
                #Checks if the user wants to add an element in the matrix
                elif self.curToken.text == "insert":
                    print("INSERT ELEMENT IN MATRIX: "+ self.curToken.text)
                    self.nextToken()
                    self.match(TokenType.ROUNDBRACKETLEFT)
                    elements = 0

                    #checks if the element is a list already created
                    if self.checkToken(TokenType.IDENT):
                        tempList = self.curToken.text
                        self.isListIdent(procedure)
                        self.nextToken()
                        self.match(TokenType.COMA)
                        elements = self.getSymbolValue(self.tempIdent)
                    
                    #checks if the element is a new list
                    elif self.checkToken(TokenType.SQRBRACKETLEFT):
                        self.nextToken()
                        if self.curToken.text == "true":
                            tempList += "[True"
                        elif self.curToken.text == "false":
                            tempList += "[False"
                        else:
                            tempList += "[" + self.curToken.text
                        self.checkLstElmnt() #first element
                        print("Adding to the list: " + self.currentTextLine)
                        elements = 1
        
                        while not self.checkToken(TokenType.SQRBRACKETRIGHT):
                            self.match(TokenType.COMA)
                            tempList += ','
                            if self.curToken.text == "true":
                               tempList += "True"
                            elif self.curToken.text == "false":
                                tempList += "False"
                            else:
                                tempList += self.curToken.text
                            self.checkLstElmnt()
                            print("Adding to the list: " + self.currentTextLine)
                            elements = elements + 1
                            
                        self.match(TokenType.SQRBRACKETRIGHT)
                        tempList += ']'
                        self.match(TokenType.COMA)
                    else:
                        self.abort("Invalid token: " + self.curToken.text)

                    #Checks for the operation number 0 for rows and 1 for columns
                    operation = 0
                    if self.checkToken(TokenType.NUMBER) or self.checkToken(TokenType.IDENT):
                        
                        if self.checkToken(TokenType.NUMBER):
                            tempMatrixOperation = self.curToken.text
                            operation = int(self.curToken.text)
                        elif self.symbolExists(self.curToken.text, procedure) and self.getSymbolType(self.curToken.text, procedure):
                            operation = self.getSymbolValue(self.curToken.text)
                        else:
                            self.abort("Trying to access invalid identifier: " + self.curtoken.text)
                        
                        if operation == 0 or operation == 1:
                            self.nextToken()

                                #Checks if the user wants to select a specific index matrix.insert(element, operation, index)
                            if self.checkToken(TokenType.COMA):
                                self.nextToken()
                                index= 0
                                if self.checkToken(TokenType.NUMBER) or self.checkToken(TokenType.IDENT):
                                    if self.checkToken(TokenType.NUMBER):
                                        tempMatrixOperation += self.curToken.text
                                        index = int(self.curToken.text)
                                    elif self.symbolExists(self.curToken.text, procedure) and self.getSymbolType(self.curToken.text, procedure):
                                        index = self.getSymbolValue(self.curToken.text)
                                    else:
                                        self.abort("Trying to access invalid identifier: " + self.curtoken.text)

                                    if operation == 0:
                                        self.checkRows(matrixRows, index)
                                        print("Columns: ", matrixColumns)
                                        print("Elelemnts: ", elements)
                                        if matrixColumns == elements:
                                            self.addRows(matrix, procedure)
                                            
                                    else:
                                        self.checkColumns(matrixColumns, index)
                                        self.addColumns(matrix, procedure)
                                        
                                    self.nextToken()
                                else:
                                    self.abort("Expected an int, got: " + self.curToken.text)
                                
                            #Insert operation without index matrix.insert(element, operation)
                            elif(self.checkToken(TokenType.ROUNDBRACKETRIGHT)):
                                if operation == 0:
                                    self.addRows(matrix, procedure)
                                            
                                else:
                                    self.addColumns(matrix, procedure)
                                    
                            else:
                                self.abort("Expected a , or an int, got: " + self.curToken.text)
                                
                            self.match(TokenType.ROUNDBRACKETRIGHT)
                        else:
                            self.abort("Expected an int, got: " + self.curToken.text)
                    
                        self.currentTextLine = self.indentation
                        if len(tempMatrixOperation) == 1:
                            if tempMatrixOperation == "0":
                                self.currentTextLine += "out_aux.insertMatrixRow(" + matrix + "," + tempList + ")"
                            elif tempMatrixOperation == "1":
                                self.currentTextLine += "out_aux.insertMatrixColumn(" + matrix + "," + tempList + ")"
                        else:
                            if tempMatrixOperation[0] == "0":
                                self.currentTextLine += "out_aux.insertMatrixRowAtPos(" + matrix + "," + tempList + "," + tempMatrixOperation[1:] + ")"
                            elif tempMatrixOperation[0] == "1":
                                self.currentTextLine += "out_aux.insertMatrixColumnAtPos(" + matrix + "," + tempList + "," + tempMatrixOperation[1:] + ")"
                        self.emitter.emitLine(self.currentTextLine)
                        self.currentTextLine = ""
                    else:
                        self.abort("Expected a 0 or a 1, got: " + self.curToken.text)

                
                #Delete operation
                elif self.curToken.text == "delete":
                    print("DELETE ELEMENT FROM MATRIX: "+ self.curToken.text)
                    self.nextToken()
                    self.match(TokenType.ROUNDBRACKETLEFT)
                    posNumber = ""

                    #Checks for a valid index
                    index=0
                    if self.checkToken(TokenType.NUMBER) or self.checkToken(TokenType.IDENT):
                        if self.checkToken(TokenType.NUMBER):
                            index = int(self.curToken.text)
                        elif self.symbolExists(self.curToken.text, procedure) and self.getSymbolType(self.curToken.text, procedure):
                            index= self.getSymbolValue(self.curToken.text)
                        else:
                            self.abort("Trying to access invalid identifier: " + self.curtoken.text)
                        posNumber = str(index)
                        #index = int(self.curToken.text)

                        self.nextToken()
                        self.match(TokenType.COMA)

                        #Checks for the operation: 0 for rows and 1 for columns
                        operation = 0

                        if self.checkToken(TokenType.NUMBER) or self.checkToken(TokenType.IDENT):
                            if self.checkToken(TokenType.NUMBER):
                                operation = int(self.curToken.text)
                            elif self.symbolExists(self.curToken.text, procedure) and self.getSymbolType(self.curToken.text, procedure):
                                operation = self.getSymbolValue(self.curToken.text)
                            else:
                                self.abort("Trying to access invalid identifier: " + self.curtoken.text)
                            if operation == 0:
                                self.checkRows(matrixRows, index)
                                self.deleteRows(matrix, procedure)
                                self.currentTextLine = self.indentation
                                self.currentTextLine += "out_aux.deleteMatrixRow(" + posNumber + ")"
                                self.emitter.emitLine(self.currentTextLine)
                                self.currentTetLine = ""
                            elif operation == 1:
                                self.checkColumns(matrixColumns, index)
                                self.deleteColumns(matrix, procedure)
                                self.currentTextLine = self.indentation
                                self.currentTextLine += "out_aux.deleteMatrixColumn(" + posNumber + ")"
                                self.emitter.emitLine(self.currentTextLine)
                                self.currentTectLine = ""
                            else:
                                self.abort("Expected a 0 or a 1, got: " + self.curToken.text)
                        else:
                            self.abort("Expected a 0 or a 1, got: " + self.curToken.text)
                    else:
                        self.abort("Expected an int, got: " + self.curToken.text)
                    self.nextToken()
                    self.match(TokenType.ROUNDBRACKETRIGHT)

                else:
                    self.abort("Invalid token: "+ self.curToken.text)


        #Statement if
        #statement := If comparison "{" {statement} "}" ";"
        elif self.checkToken(TokenType.If):
            print("STATEMENT-IF")
            self.currentLineText = self.indentation + "if "
            self.nextToken()
            self.tempProcedure = procedure
            self.comparison(procedure)
            self.currentLineText += ":"
            self.emitter.emitLine(self.currentLineText)
            self.currentLineText = ""
            self.indentation += '\t'

            self.match(TokenType.CURLYBRACKETLEFT)

            # Zero or more statements in the body.
            while not self.checkToken(TokenType.CURLYBRACKETRIGHT):
                self.statement(procedure)

            self.indentation = self.indentation[:-1]

            self.match(TokenType.CURLYBRACKETRIGHT)
        
        #Statement for
        #Statement := For variable "In" iterable "Step" num "{" {statement} "}" ";"
        elif self.checkToken(TokenType.For):
            print("STATEMENT-FOR")
            self.nextToken()
            self.currentTextLine = self.indentation + "for "
            hasStep = False

            if self.checkToken(TokenType.IDENT):
                iterable = self.curToken.text
                if self.sintaxVar(self.curToken.text):
                    self.addSymbol(self.curToken.text, TokenType.NUMBER, procedure, 0, None, None)
                    self.currentTextLine += self.curToken.text + " in "
                    self.nextToken()
                    self.match(TokenType.In)
